@@ -1458,3 +1458,6 @@ def undefer_group(name):
 
     """
     return strategies.UndeferGroupOption(name)
+
+from sqlalchemy import util as _sa_util
+_sa_util.importlater.resolve_all()
